...

    var id: String { rawValue }

    var title: String {
        switch self {
        case .discover:
            "Discover"
        case .requests:
            "Requests"
        case .host:
            "Host"
        case .profile:
            "Profile"
        }
    }
...
